<resources>
    <string name="app_name">Beacon SDK Demo</string>

    <string name="button_pair">Pair</string>
    <string name="button_unpair">Unpair</string>
    <string name="button_reset">Reset</string>
    <string name="button_request_permission">Request Permission</string>
    <string name="button_respond">Respond</string>
    <string name="button_clear_response">Clear</string>

    <string name="hint_beacon_response">- Beacon Response -</string>
    <string name="hint_beacon_request">- Beacon Request -</string>

    <string name="hint_pairing_request">Pairing Request</string>
</resources>