<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="@dimen/size_medium"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pairingRequestTextInput"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:hint="@string/hint_pairing_request"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/pairButton"
            android:text="@string/button_pair"
            app:layout_constraintTop_toBottomOf="@id/pairingRequestTextInput"
            app:layout_constraintEnd_toEndOf="parent"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/unpairButton"
            android:text="@string/button_unpair"
            app:layout_constraintTop_toBottomOf="@id/pairingRequestTextInput"
            app:layout_constraintStart_toStartOf="parent"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/respondButton"
            android:text="@string/button_respond"
            android:layout_marginTop="@dimen/size_large"
            app:layout_constraintTop_toBottomOf="@id/pairButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/messageTextView"
            android:gravity="center_vertical"
            android:padding="@dimen/size_large"
            android:hint="@string/hint_beacon_request"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/respondButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>