<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="@dimen/size_medium"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/pairingRequestTextView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textIsSelectable="true"
            android:background="@android:drawable/editbox_background"
            android:layout_width="0dp"
            android:minHeight="100dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/pairButton"
            android:text="@string/button_pair"
            app:layout_constraintTop_toBottomOf="@id/pairingRequestTextView"
            app:layout_constraintEnd_toEndOf="parent"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/resetButton"
            android:text="@string/button_reset"
            app:layout_constraintTop_toBottomOf="@id/pairingRequestTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/requestPermissionButton"
            android:text="@string/button_request_permission"
            android:layout_marginTop="@dimen/size_large"
            app:layout_constraintTop_toBottomOf="@id/pairButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/clearResponseButton"
            android:text="@string/button_clear_response"
            app:layout_constraintTop_toBottomOf="@id/requestPermissionButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/messageTextView"
            android:gravity="center_vertical"
            android:padding="@dimen/size_large"
            android:hint="@string/hint_beacon_response"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clearResponseButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>